# clearstone-sdk

./: .gitignore  404.html  CHANGELOG.md  DOCS_SETUP.md  README.md  clearstone_traces.db  index.html  manual_test_DELETE.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  test.yml
about/contributing/: index.html
about/license/: index.html
about/telemetry/: index.html
api/debugging/: index.html
api/governance/: index.html
api/observability/: index.html
api/testing/: index.html
api/utils/: index.html
architecture/design-philosophy/: index.html
architecture/overview/: index.html
clearstone/: __init__.py
clearstone/checkpointing/: checkpoint.py  models.py  replay.py  state_manager.py
clearstone/cli/: formatters.py  main.py
clearstone/cli/commands/: checkpoint_commands.py  policy_commands.py  trace_commands.py
clearstone/core/: actions.py  context.py  exceptions.py  policy.py
clearstone/debugging/: __init__.py  checkpoint.py  replay.py
clearstone/integrations/future/: autogen.py  crewai.py
clearstone/integrations/langchain/: __init__.py  callbacks.py  decorators.py  tools.py
clearstone/observability/: __init__.py  models.py  provider.py  tracer.py
clearstone/policies/: __init__.py  common.py
clearstone/serialization/: __init__.py  hybrid.py
clearstone/storage/: __init__.py  sqlite.py  types.py
clearstone/testing/: __init__.py  assertions.py  harness.py
clearstone/tracing/: analytics.py  models.py  storage.py  tracer.py
clearstone/utils/: audit.py  composition.py  debugging.py  intervention.py  logging.py  metrics.py  paths.py  serialization.py  telemetry.py  validator.py
docs/: api_reference.md  architecture.md  checkpoint_guide.md  getting-started.md  getting_started.md  index.md  policies.md  policy_guide.md
docs/about/: contributing.md  license.md  telemetry.md
docs/api/: debugging.md  governance.md  index.md  observability.md  testing.md  utils.md
docs/architecture/: design-philosophy.md  overview.md
docs/assets/: .gitkeep
docs/guide/: core-concepts.md  developer-toolkit.md  getting-started.md  governance.md  observability.md  testing.md  time-travel-debugging.md  writing-policies.md
examples/: 01_basic_policy.py  02_pii_redaction.py  03_tool_access_control.py  04_cost_attribution.py  05_multi_agent_workflow.py  06_checkpoint_resume.py  07_cli_examples.sh  08_langchain_integration.py  09_policy_library_demo.py  10_policy_composition.py  11_policy_validation.py  12_policy_debugging.py  13_audit_trail.py  14_policy_metrics.py  15_human_in_the_loop.py  16_local_llm_protection.py
getting-started/: index.html
guide/core-concepts/: index.html
guide/governance/: index.html
guide/observability/: index.html
guide/testing/: index.html
guide/time-travel-debugging/: index.html
policies/: index.html
search/: search_index.json
tests/: conftest.py
tests/cli/: test_cli.py
tests/integration/: test_langchain_integration.py  test_testing_pillar.py
tests/unit/: test_actions.py  test_audit.py  test_common_policies.py  test_composition.py  test_context.py  test_debugging.py  test_intervention.py  test_metrics.py  test_policy_engine.py  test_validator.py
tests/unit/debugging/: test_checkpoint.py  test_replay.py
tests/unit/observability/: __init__.py  test_models.py  test_provider.py  test_tracer.py
tests/unit/serialization/: __init__.py  test_hybrid.py
tests/unit/storage/: __init__.py  test_sqlite.py
tests/unit/testing/: test_assertions.py  test_harness.py
tests/unit/utils/: test_telemetry.py
