[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clearstone-sdk"
version = "0.1.0"
description = "Checkpoint-based debugging for multi-agent AI systems."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Pablo San Francisco", email = "pablo@clearstone.dev"},
]
keywords = ["ai", "multi-agent", "policy", "checkpoint", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
clearstone = "clearstone.cli.cli:cli"

[tool.setuptools]
packages = ["clearstone", "clearstone.core", "clearstone.tracing", "clearstone.checkpointing", 
            "clearstone.integrations", "clearstone.integrations.langchain", 
            "clearstone.integrations.future", "clearstone.cli", "clearstone.cli.commands", "clearstone.utils"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

