# pyproject.toml

[build-system]
# Simplified build system. We will not use setuptools_scm for now.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearstone-sdk"
version = "0.1.0"
authors = [
    { name = "The Clearstone Team", email = "pablo@clearstone.dev" },
]
description = "The open-source reliability toolkit for AI agents. Add production-grade governance, observability, and debugging to any agent workflow."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "langchain", "agent", "governance", "observability", "testing", "debugging", "safety", "guardrails"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/Sancauid/clearstone-sdk"
"Documentation" = "https://sancauid.github.io/clearstone-sdk/"
"Bug Tracker" = "https://github.com/Sancauid/clearstone-sdk/issues"
"Changelog" = "https://github.com/Sancauid/clearstone-sdk/blob/main/CHANGELOG.md"

[project.scripts]
# Ensure this path matches your file structure, e.g., clearstone/cli/main.py -> cli.main:cli
clearstone = "clearstone.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "numpy>=1.21.0",
]

# BEST PRACTICE: Use automatic package finding instead of a manual list.
[tool.setuptools.packages.find]
where = ["."]
include = ["clearstone*"]
exclude = ["tests*"]

# The pytest configuration is excellent, no changes needed.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
# We'll set a standard line length of 88 characters.
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
exclude = [".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]